--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <!-- Profile Section -->
         <div class="profile-section">
             <div class="profile-photo-container">
-                <img src="profile.jpg" alt="Your Photo" class="profile-photo">
+                <img src="Profile.jpg" alt="Your Photo" class="profile-photo">
             </div>
             <div class="profile-info">
                 <h1>Hello, I'm Dhruvil Pittalia</h1>
                 <p>An ambitious and driven Computer Engineering student with a strong academic foundation in programming,
-                     system design, and software development. Actively engaged in hands-on learning through academic projects,
-                      including creating a Healthcare management system using MERN Stack, Car rental website using HTML, CSS, and JavaScript and basic E-Commerce website about online Book Reading and purchasing using React JS. 
-                      Proficient in Java, and database management, with a passion for problem-solving and innovation. Seeking an opportunity to contribute to Front-End Development Technologies as an Intern,
+                     system design and software development. Actively engaged in hands-on learning through academic projects,
+                      including creating a Healthcare management system using MERN Stack, a Car rental website using HTML, CSS, and JavaScript, and a basic E-Commerce website about online Book Reading and purchasing using React JS. 
+                      Proficient in Java and database management, with a passion for problem-solving and innovation. Seeking an opportunity to contribute to Front-End Development Technologies as an Intern,
                      while enhancing technical expertise and gaining practical industry experience.</p>
                 <p>Feel free to browse my portfolio and projects, and don't hesitate to get in touch!</p>
             </div>
