--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@
     </div>
     <div class="projects-section">
         <h1 class="fade-in">About Me</h1>
-        <p>Hi, I'm Dhruvil Pittalia, a Computer Engineering student passionate about technology and software development.
+        <p>Hi, I'm Dhruvil Pittalia, a Computer Engineering and software developer.
              I love solving complex problems and creating impactful digital solutions.</p>
         <div class="projects-grid">
             <div class="project-card fade-in">
                 <div class="project-info">
                     <h2>Background and Education</h2>
-                    <p>Currently pursuing a Bachelor's degree in Computer Engineering at Silver Oak University, 
+                    <p>Recently, I passed out my Bachelor's degree in Computer Engineering at Silver Oak University, 
                         where I've gained hands-on experience in programming languages like Python, Java, and C++,
                          and explored topics in web development.</p>
                 </div>
